--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc -b && vite build",
     "start": "ts-node test.ts",
     "download-and-generate": "ts-node downloadSwagger && ts-node generateTypes",
+    "start-swagger-typescript-api": "npx swagger-typescript-api -p https://dev-i.layer.cafe/schema/ -o ./src/api",
     "generate-model": "ts-node downloadSwagger.ts",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "swagger-typescript-api": "^13.0.23",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
